--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,27 +1,40 @@
-#container {
+.card {
+  width: 300px;
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 0px 2px 10px #0c0c0c1a;
+  padding: 30px 10px;
   text-align: center;
-
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
+  margin: 20px auto;
+  opacity: 0;
+  animation: fadeIn 1s ease forwards;
 }
 
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
+.profile-img {
+  width: 180px;
+  border-radius: 50%;
+  object-fit: cover;
+  margin: 0 auto 20px;
 }
 
-#container p {
-  font-size: 16px;
-  line-height: 22px;
-
-  color: #8c8c8c;
-
-  margin: 0;
+.nome {
+  font-size: 24px;
+  margin-bottom: 10px;
+  color: #333;
 }
 
-#container a {
-  text-decoration: none;
+.turma {
+  font-size: 18px;
+  color: #666;
+}
+
+@keyframes fadeIn {
+  from {
+    transform: translateY(100%);
+    opacity: 0;
+  }
+  to {
+    transform: translateY();
+    opacity: 1;
+  }
 }
